--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,6 +10,6 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-go@v4
         with:
-          go-version: ">=1.21.0"
+          go-version-file: go.mod
       - uses: golangci/golangci-lint-action@v3
       - run: make
