--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,7 +1,18 @@
 name: build
+
 on:
-  pull_request:
   push:
+    branches:
+      - main
+  pull_request:
+
+defaults:
+  run:
+    shell: bash -xe {0}
+
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
 
 jobs:
   build:
@@ -11,5 +22,6 @@ jobs:
       - uses: actions/setup-go@v4
         with:
           go-version-file: go.mod
+          cache: false
       - uses: golangci/golangci-lint-action@v3
       - run: make
